--- a/_config.yml
+++ b/_config.yml
@@ -111,7 +111,7 @@ author:
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "siyin_wang"
+  twitter          : "wang_siyin"
   vine             :
   weibo            :
   xing             :
