--- a/_config.yml
+++ b/_config.yml
@@ -77,6 +77,9 @@ analytics:
   google:
     tracking_id          :
 
+# Google Analytics
+google_analytics: G-HTF8K4Y041
+
 
 # Site Author
 author:
