--- a/_config.yml
+++ b/_config.yml
@@ -73,12 +73,10 @@ social:
 
 # Analytics
 analytics:
-  provider               :  "google-universal" # false (default), "google", "google-universal", "custom"
+  provider               :  "google-gtag" # false (default), "google", "google-universal", "custom"
   google:
-    tracking_id          :
+    measurement_id          : G-HTF8K4Y041
 
-# Google Analytics
-google_analytics: G-HTF8K4Y041
 
 
 # Site Author
