--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 # Site Author
 author:
   name             : "Siyin Wang 王思尹"
-  avatar           : "siyin3.jpg"
+  avatar           : "siyin4.JPG"
   bio              : "Undergraduate at Fudan University"
   location         : "Shanghai, China"
   employer         :
