--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Siyin Wang"
 title_separator          : "-"
 name                     : &name "Siyin Wang"
-description              : &description "PhD Studenet at Fudan University"
+description              : &description "PhD Student at Fudan University"
 url                      : https://sinwang20.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "sinwang20.github.io"
@@ -83,7 +83,7 @@ analytics:
 author:
   name             : "Siyin Wang 王思尹"
   avatar           : "siyin4.JPG"
-  bio              : "PhD Studenet at Fudan University"
+  bio              : "PhD Student at Fudan University"
   location         : "Shanghai, China"
   employer         :
   email            : "siyinwang20@fudan.edu.cn"
